--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,6 +8,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Cinzel', serif;
+    
+}
+
+body {
+    background-color: $light;
+    letter-spacing: 1px;
+    line-height: 1.5;
 }
 
 li {
@@ -44,7 +51,7 @@ h1, h2, h3, p {
     padding: 1rem;
     display: inline-block;
     width: 100%;
-    max-width: 175px;
+    max-width: 200px;
     text-align: center;
     border: 1px solid $primary;
 }
@@ -91,15 +98,20 @@ h1, h2, h3, p {
     right: 0;
     z-index: 5;
     &__container {
-        @include container(1rem, 960px);
+        @include container(1rem, 600px);
         display: flex;
         justify-content: space-between;
         align-items: center;
-
+        @include xl {
+            @include container(1rem, 1200px);
+        }
     }
 
     &__nav-links {
-        display: flex;
+        display: none;
+        @include xl {
+            display: flex;
+        }
     }
     &__nav-link {
         margin-right: 1.5rem;
@@ -111,37 +123,59 @@ h1, h2, h3, p {
 //showcase 
 
 .showcase {
+        background-image: linear-gradient(rgba($light,0.8), rgba($light, 0.8)), url('../images/landing-image.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        @include xl {
+            background-image: unset;
+        }
     &__container {
-        @include container(0 1rem, 960px);
-        
+        @include container(0 1rem, 600px);
         height: 100vh;
         position: relative;
+        @include xl {
+            @include container(0 1rem, 1200px);
+        }
     }
     &__text {
        display: flex;
        justify-content: center;
+       align-items: center;
        flex-direction: column;
+       text-align: center;
        height: 100%;
        max-width: 600px;
+       @include xl {
+           align-items: flex-start;
+           text-align: left;
+       }
        h1 {
-           font-size: 5rem;
+           font-size: 2.5rem;
            font-weight: 900;
            line-height: 1.2;
+           @include xl {
+            font-size: 5rem; 
+           }
        }
        
     }
 
     &__image {
+        display: none;
         position: absolute;
         top: 0;
         right: 0;
-        background-image: linear-gradient(rgba($light,0.3), rgba($light, 0.3)), url('../images/landing-image.jpg');
+        background-image: linear-gradient(rgba($light,0.2), rgba($light, 0.2)), url('../images/landing-image.jpg');
         background-repeat: no-repeat;
         background-position: left center;
         background-size: cover;
         height: 100%;
         width: 70%;
         z-index: -5;
+        @include xl {
+            display: block;
+        }
     }
 }
 
@@ -150,8 +184,8 @@ h1, h2, h3, p {
 .menu {
     &__container {
         @include container(5rem 1rem 0, 600px);
-        @include lg {
-            @include container(10rem 1rem 0,  960px);
+        @include xl {
+            @include container(10rem 1rem 0,  1200px);
         }
     }
 
@@ -159,7 +193,7 @@ h1, h2, h3, p {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 2rem;
-        @include lg {
+        @include xl {
             gap: 2rem 4rem;
             grid-template-columns: repeat(2, 1fr);
         }
@@ -200,15 +234,22 @@ h1, h2, h3, p {
     
     &__container {
         @include container(5rem 1rem, 600px);
-        @include lg {
-            @include container(10rem 1rem, 960px);
+        @include xl {
+            @include container(10rem 1rem, 1200px);
         }
         display: flex;
+        flex-direction: column;
+        @include xl {
+            flex-direction: row;
+        }
         gap: 2rem;
     }
 
     &__image {
         flex: 1;
+        @include xl {
+            order: 1;
+        }
         img {
             width: 100%;
         }
@@ -216,9 +257,18 @@ h1, h2, h3, p {
 
     &__text {
         flex: 1;
-        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @include xl {
+            order: 2;
+        }
         .heading {
-            text-align: left;
+            
+            margin-bottom: 0;
+            @include xl {
+                text-align: left;
+            }
         }
     }
     
@@ -233,11 +283,14 @@ h1, h2, h3, p {
         background-size: cover;
     &__container {
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
-        gap: 2rem;
+        gap: 3rem;
         @include container(5rem 1rem, 600px);
-        @include lg {
-            @include container(10rem 1rem, 960px);
+        @include xl {
+            gap: 15rem;
+            flex-direction: row;
+            @include container(10rem 1rem, 1200px);
         }
 
     }
@@ -245,9 +298,14 @@ h1, h2, h3, p {
     &__heading {
         display: flex;
         align-items: center;
+       
         color: $light; 
        .heading {
-           text-align: left;
+
+            margin-bottom: 0;
+           @include xl {
+            text-align: left;
+           }
        } 
      
    
