--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,6 +11,13 @@
     
 }
 
+html {
+    font-size: 0.9rem;
+    @include sm {
+        font-size: 1rem;
+    }
+}
+
 body {
     background-color: $light;
     letter-spacing: 1px;
@@ -44,18 +51,24 @@ h1 {
   }
 
 h1, h2, h3, p {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 %btn {
-    padding: 1rem;
+    padding: 1rem 2rem;
     display: inline-block;
-    width: 100%;
-    max-width: 200px;
     text-align: center;
     border: 1px solid $primary;
 }
 
+.logo {
+    img {
+        width: 7rem;
+        @include md {
+            width: 10rem;
+        }
+    }
+}
 .btn {
     @extend %btn;
     color: $dark;
@@ -73,18 +86,26 @@ h1, h2, h3, p {
     @extend %btn;
     color: $primary;
     background-color: transparent;
+    &:hover {
+        background-color: $primary;
+        color: $dark;
+        
+    }
+}
+
+
+.above-heading {
+    margin-bottom: 0;
+    color: $primary;
+    font-family: 'Tangerine', cursive;
+    font-size: 2rem;
+    text-align: center;
 }
 
 .heading {
     margin-bottom: 4rem;
     text-align: center;
-   
-    h2 {
-        margin-bottom: 0;
-        color: $primary;
-        font-family: 'Tangerine', cursive;
-        font-size: 2rem;
-    }
+    font-weight: 900;
 }
 
 
@@ -102,14 +123,14 @@ h1, h2, h3, p {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        @include xl {
-            @include container(1rem, 1200px);
+        @include md {
+            @include container(1rem, 960px);
         }
     }
 
     &__nav-links {
         display: none;
-        @include xl {
+        @include md {
             display: flex;
         }
     }
@@ -123,38 +144,38 @@ h1, h2, h3, p {
 //showcase 
 
 .showcase {
-        background-image: linear-gradient(rgba($light,0.8), rgba($light, 0.8)), url('../images/landing-image.jpg');
+        background-image: linear-gradient(rgba($light,0.85), rgba($light, 0.85)), url('../images/landing-image.jpg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        @include xl {
+        @include md {
             background-image: unset;
         }
     &__container {
         @include container(0 1rem, 600px);
         height: 100vh;
         position: relative;
-        @include xl {
-            @include container(0 1rem, 1200px);
+        @include md {
+            @include container(0 1rem, 960px);
         }
     }
     &__text {
        display: flex;
        justify-content: center;
        align-items: center;
-       flex-direction: column;
        text-align: center;
+       flex-direction: column;
        height: 100%;
-       max-width: 600px;
-       @include xl {
-           align-items: flex-start;
-           text-align: left;
-       }
+       max-width: 500px;
+        @include md {
+            align-items: flex-start;
+            text-align: left; 
+        }
        h1 {
            font-size: 2.5rem;
            font-weight: 900;
            line-height: 1.2;
-           @include xl {
+           @include md {
             font-size: 5rem; 
            }
        }
@@ -173,7 +194,7 @@ h1, h2, h3, p {
         height: 100%;
         width: 70%;
         z-index: -5;
-        @include xl {
+        @include md {
             display: block;
         }
     }
@@ -185,7 +206,7 @@ h1, h2, h3, p {
     &__container {
         @include container(5rem 1rem 0, 600px);
         @include xl {
-            @include container(10rem 1rem 0,  1200px);
+            @include container(10rem 1rem 0,  960px);
         }
     }
 
@@ -235,7 +256,7 @@ h1, h2, h3, p {
     &__container {
         @include container(5rem 1rem, 600px);
         @include xl {
-            @include container(10rem 1rem, 1200px);
+            @include container(10rem 1rem, 960px);
         }
         display: flex;
         flex-direction: column;
@@ -312,8 +333,8 @@ h1, h2, h3, p {
     }
 
     &__contact-info {
-        padding: 2rem;
-        background-color: rgba($dark, 0.7);
+        // padding: 2rem;
+        // background-color: rgba($dark, 0.7);
         h3 {
             margin-bottom: 0.5rem;
             color: $light;
