--- a/styles/main.css
+++ b/styles/main.css
@@ -62,7 +62,7 @@ h1, h2, h3, p {
 }
 
 .logo img {
-  width: 7rem;
+  width: 8rem;
 }
 
 @media (min-width: 1200px) {
@@ -248,12 +248,12 @@ h1, h2, h3, p {
 .showcase__text h1 {
   font-size: 2.5rem;
   font-weight: 900;
-  line-height: 1.2;
+  line-height: 1;
 }
 
 @media (min-width: 1200px) {
   .showcase__text h1 {
-    font-size: 5rem;
+    font-size: 6rem;
   }
 }
 
@@ -345,7 +345,7 @@ h1, h2, h3, p {
 }
 
 .about__container {
-  padding: 5rem 1rem;
+  padding: 5rem 1rem 0;
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
@@ -361,8 +361,8 @@ h1, h2, h3, p {
 
 @media (min-width: 1200px) {
   .about__container {
-    padding: 10rem 1rem;
-    max-width: 960px;
+    padding: 10rem 1rem 0;
+    max-width: 1200px;
     width: 100%;
     margin: 0 auto;
   }
@@ -418,8 +418,14 @@ h1, h2, h3, p {
   }
 }
 
+@media (min-width: 1200px) {
+  .about__text .above-heading {
+    text-align: left;
+  }
+}
+
 .about__text .heading {
-  margin-bottom: 0;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 1200px) {
@@ -428,26 +434,17 @@ h1, h2, h3, p {
   }
 }
 
-.contact {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(27, 27, 27, 0.6)), to(rgba(27, 27, 27, 0.6))), url("../images/contact-image.jpg");
-  background-image: linear-gradient(rgba(27, 27, 27, 0.6), rgba(27, 27, 27, 0.6)), url("../images/contact-image.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+.about__text p {
+  text-align: center;
+}
+
+@media (min-width: 1200px) {
+  .about__text p {
+    text-align: left;
+  }
 }
 
 .contact__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  gap: 3rem;
   padding: 5rem 1rem;
   max-width: 600px;
   width: 100%;
@@ -456,11 +453,6 @@ h1, h2, h3, p {
 
 @media (min-width: 1200px) {
   .contact__container {
-    gap: 15rem;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
     padding: 10rem 1rem;
     max-width: 1200px;
     width: 100%;
@@ -468,36 +460,78 @@ h1, h2, h3, p {
   }
 }
 
-.contact__heading {
+.contact__flex-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #F6F6F6;
-}
-
-.contact__heading .heading {
-  margin-bottom: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2rem;
 }
 
 @media (min-width: 1200px) {
-  .contact__heading .heading {
+  .contact__flex-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.contact__contact-info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: center;
+}
+
+@media (min-width: 1200px) {
+  .contact__contact-info {
     text-align: left;
   }
 }
 
-.contact__contact-info h3 {
-  margin-bottom: 0.5rem;
-  color: #F6F6F6;
+.contact__contact-info ul {
+  margin-bottom: 2rem;
 }
 
-.contact__contact-info ul {
-  margin-bottom: 1.5rem;
+.contact__contact-info h3 {
+  margin-bottom: 0.5rem;
 }
 
 .contact__contact-info a {
-  font-weight: 400;
+  color: #1B1B1B;
+  font-weight: 500;
+  margin-right: 1rem;
+}
+
+.contact__map {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
+.footer {
+  background-color: #1B1B1B;
+  text-align: center;
+}
+
+.footer__top {
+  margin: 0 1rem;
+}
+
+.footer__container {
+  padding: 3rem 1rem;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  border-bottom: 1px solid #494949;
+}
+
+.footer__bottom {
+  padding: 2rem;
+  color: #F6F6F6;
 }
 /*# sourceMappingURL=main.css.map */
