--- a/styles/main.scss
+++ b/styles/main.scss
@@ -63,7 +63,7 @@ h1, h2, h3, p {
 
 .logo {
     img {
-        width: 7rem;
+        width: 8rem;
         @include xl {
             width: 10rem;
         }
@@ -197,9 +197,9 @@ h1, h2, h3, p {
        h1 {
            font-size: 2.5rem;
            font-weight: 900;
-           line-height: 1.2;
+           line-height: 1;
            @include xl {
-            font-size: 5rem; 
+            font-size: 6rem; 
            }
        }
        
@@ -276,9 +276,9 @@ h1, h2, h3, p {
 .about {
     
     &__container {
-        @include container(5rem 1rem, 600px);
+        @include container(5rem 1rem 0, 600px);
         @include xl {
-            @include container(10rem 1rem, 960px);
+            @include container(10rem 1rem 0, 1200px);
         }
         display: flex;
         flex-direction: column;
@@ -306,9 +306,21 @@ h1, h2, h3, p {
         @include xl {
             order: 2;
         }
+        .above-heading {
+            @include xl {
+                text-align: left;
+            }
+        }
         .heading {
-            
-            margin-bottom: 0;
+            margin-bottom: 2rem;
+            @include xl {
+                text-align: left;
+               
+            }
+        }
+
+        p {
+            text-align: center;
             @include xl {
                 text-align: left;
             }
@@ -320,52 +332,65 @@ h1, h2, h3, p {
 //contact
 
 .contact {
-    background-image: linear-gradient(rgba($dark,0.6), rgba($dark, 0.6)), url('../images/contact-image.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+   
     &__container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        gap: 3rem;
         @include container(5rem 1rem, 600px);
         @include xl {
-            gap: 15rem;
-            flex-direction: row;
             @include container(10rem 1rem, 1200px);
         }
 
     }
 
-    &__heading {
+    &__flex-container {
         display: flex;
-        align-items: center;
-       
-        color: $light; 
-       .heading {
-
-            margin-bottom: 0;
-           @include xl {
-            text-align: left;
-           }
-       } 
-     
-   
+        flex-direction: column;
+        gap: 2rem;
+        @include xl {
+            flex-direction: row;
+        }
     }
 
+    
+
     &__contact-info {
-        // padding: 2rem;
-        // background-color: rgba($dark, 0.7);
-        h3 {
-            margin-bottom: 0.5rem;
-            color: $light;
+        flex: 1;
+        text-align: center;
+        @include xl {
+            text-align: left;
         }
         ul {
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
         }
+
+        h3 {
+            margin-bottom: 0.5rem
+        }
+
         a {
-            font-weight: 400;
+            color: $dark;
+            font-weight: 500;
+            margin-right: 1rem;
         }
+    }
+
+    &__map {
+     flex: 2;
+    }
+}
+
+.footer {
+    background-color: $dark;
+    text-align: center;
+    &__top {
+        margin: 0 1rem;
+    }
+    &__container {
+        @include container(3rem 1rem, 1200px);
+        border-bottom: 1px solid #494949;
+    }
+
+    &__bottom {
+        padding: 2rem;
+        color: $light;
     }
 }
