--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ a {
   font-weight: 700;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  color: #F6F6F6;
+  color: #1B1B1B;
 }
 
 a:hover {
@@ -214,6 +214,7 @@ h1, h2, h3, p {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
+    height: 800px;
   }
 }
 
@@ -265,7 +266,7 @@ h1, h2, h3, p {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(246, 246, 246, 0.2)), to(rgba(246, 246, 246, 0.2))), url("../images/landing-image.jpg");
   background-image: linear-gradient(rgba(246, 246, 246, 0.2), rgba(246, 246, 246, 0.2)), url("../images/landing-image.jpg");
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: left;
   background-size: cover;
   height: 100%;
   width: 70%;
@@ -337,7 +338,7 @@ h1, h2, h3, p {
 }
 
 .menu__item-left {
-  max-width: 300px;
+  width: 80%;
 }
 
 .menu__item-left h3 {
@@ -497,6 +498,10 @@ h1, h2, h3, p {
   margin-bottom: 2rem;
 }
 
+.contact__contact-info li {
+  margin-bottom: 0.5rem;
+}
+
 .contact__contact-info h3 {
   margin-bottom: 0.5rem;
 }
@@ -504,7 +509,6 @@ h1, h2, h3, p {
 .contact__contact-info a {
   color: #1B1B1B;
   font-weight: 500;
-  margin-right: 1rem;
 }
 
 .contact__map {
