--- a/styles/main.scss
+++ b/styles/main.scss
@@ -32,7 +32,7 @@ a {
     text-decoration: none;
     font-weight: 700;
     transition: $transition;
-    color: $light;
+    color: $dark;
         &:hover {
                 color: $primary;
             }
@@ -179,6 +179,7 @@ h1, h2, h3, p {
         position: relative;
         @include xl {
             @include container(0 1rem, 1200px);
+            height: 800px;
         }
     }
     &__text {
@@ -212,7 +213,7 @@ h1, h2, h3, p {
         right: 0;
         background-image: linear-gradient(rgba($light,0.2), rgba($light, 0.2)), url('../images/landing-image.jpg');
         background-repeat: no-repeat;
-        background-position: left center;
+        background-position: left;
         background-size: cover;
         height: 100%;
         width: 70%;
@@ -264,7 +265,7 @@ h1, h2, h3, p {
         
     }
     &__item-left {
-        max-width: 300px;
+        width: 80%;
         h3 {
             margin-bottom: 0.5rem;
         }
@@ -362,6 +363,10 @@ h1, h2, h3, p {
             margin-bottom: 2rem;
         }
 
+        li {
+            margin-bottom: 0.5rem;
+        }
+
         h3 {
             margin-bottom: 0.5rem
         }
@@ -369,7 +374,7 @@ h1, h2, h3, p {
         a {
             color: $dark;
             font-weight: 500;
-            margin-right: 1rem;
+            
         }
     }
 
