--- a/styles/main.css
+++ b/styles/main.css
@@ -118,6 +118,37 @@ h1, h2, h3, p {
           box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
 }
 
+.navbar.active {
+  position: fixed;
+  background: #F6F6F6;
+  -webkit-box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+  -webkit-animation: nav-animation 0.5s;
+          animation: nav-animation 0.5s;
+}
+
+@-webkit-keyframes nav-animation {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@keyframes nav-animation {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
 @media (min-width: 1200px) {
   .navbar {
     position: absolute;
