--- a/styles/main.css
+++ b/styles/main.css
@@ -62,7 +62,7 @@ h1, h2, h3, p {
 }
 
 .logo img {
-  width: 8rem;
+  width: 9rem;
 }
 
 @media (min-width: 1200px) {
@@ -88,11 +88,6 @@ h1, h2, h3, p {
   background-color: transparent;
 }
 
-.btn-ghost:hover {
-  background-color: #DBA859;
-  color: #1B1B1B;
-}
-
 .above-heading {
   margin-bottom: 0;
   color: #DBA859;
@@ -108,14 +103,11 @@ h1, h2, h3, p {
 }
 
 .navbar {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   z-index: 5;
-  background-color: #F6F6F6;
-  -webkit-box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
 }
 
 .navbar.active {
@@ -196,11 +188,14 @@ h1, h2, h3, p {
 }
 
 .navbar__nav-link {
-  margin-right: 1.5rem;
+  margin-left: 1.5rem;
+  color: #1B1B1B;
 }
 
-.navbar__nav-link.active {
-  color: #1B1B1B;
+.navbar__toggle {
+  padding: 0.5rem 1rem;
+  border: 1px solid #DBDBDB;
+  border-radius: 5px;
 }
 
 .navbar__toggle .bar1,
@@ -315,7 +310,7 @@ h1, h2, h3, p {
 }
 
 .menu__container {
-  padding: 5rem 1rem 0;
+  padding: 5rem 1rem;
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
@@ -323,7 +318,7 @@ h1, h2, h3, p {
 
 @media (min-width: 1200px) {
   .menu__container {
-    padding: 10rem 1rem 0;
+    padding: 10rem 1rem;
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
@@ -380,8 +375,48 @@ h1, h2, h3, p {
   margin-bottom: 0.5rem;
 }
 
+.divider {
+  background-color: #e4be83;
+}
+
+.divider__container {
+  padding: 5rem 1rem;
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+@media (min-width: 1200px) {
+  .divider__container {
+    padding: 5rem 1rem;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+.divider__items {
+  text-align: center;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
+  gap: 2rem;
+}
+
+@media (min-width: 1200px) {
+  .divider__items {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.divider img {
+  margin-bottom: 1rem;
+}
+
 .about__container {
-  padding: 5rem 1rem 0;
+  padding: 5rem 1rem;
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
@@ -397,7 +432,7 @@ h1, h2, h3, p {
 
 @media (min-width: 1200px) {
   .about__container {
-    padding: 10rem 1rem 0;
+    padding: 10rem 1rem;
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
@@ -477,6 +512,33 @@ h1, h2, h3, p {
 @media (min-width: 1200px) {
   .about__text p {
     text-align: left;
+  }
+}
+
+.reservation {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(27, 27, 27, 0.6)), to(rgba(27, 27, 27, 0.6))), url("../images/services-image.jpg");
+  background-image: linear-gradient(rgba(27, 27, 27, 0.6), rgba(27, 27, 27, 0.6)), url("../images/services-image.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.reservation__container {
+  text-align: center;
+  color: #F6F6F6;
+  padding: 5rem 1rem;
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+@media (min-width: 1200px) {
+  .reservation__container {
+    padding: 10rem 1rem;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
   }
 }
 
