--- a/styles/main.css
+++ b/styles/main.css
@@ -195,7 +195,7 @@ h1, h2, h3, p {
 .navbar__toggle {
   padding: 0.5rem 1rem;
   border: 1px solid #DBDBDB;
-  border-radius: 5px;
+  border-radius: 2px;
 }
 
 .navbar__toggle .bar1,
@@ -612,6 +612,19 @@ h1, h2, h3, p {
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
+  display: none;
+}
+
+@media (min-width: 1200px) {
+  .contact__map {
+    display: block;
+  }
+}
+
+@media (min-width: 1200px) {
+  .mobile-map {
+    display: none;
+  }
 }
 
 .footer {
