--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,8 +12,9 @@
 }
 
 html {
+    scroll-behavior: smooth;
     font-size: 0.8rem;
-    @include sm {
+    @include xl {
         font-size: 1rem;
     }
 }
@@ -109,32 +110,34 @@ h1, h2, h3, p {
 // navbar
 
 .navbar {
-    position: absolute;
+    background-color: $light;
+    position: fixed;
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
     top: 0;
     left: 0;
     right: 0;
     z-index: 5;
     
-    &.active {
-        position: fixed;
-        background: $light;
-        box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
-        animation: nav-animation 0.5s;
-
-        @keyframes nav-animation {
-            0% {
-                transform: translateY(-100%);
-            }
-            100% {
-                transform: translateY(0%);
-            }
-        }
-    }
+   
     @include xl {
         position: absolute;
         background-color: transparent;
         box-shadow: none;
-        
+        &.active {
+            position: fixed;
+            background: $light;
+            box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+            animation: nav-animation 0.5s;
+    
+            @keyframes nav-animation {
+                0% {
+                    transform: translateY(-100%);
+                }
+                100% {
+                    transform: translateY(0%);
+                }
+            }
+        }
     }
     &__container {
         @include container(1rem, 600px);
@@ -161,6 +164,7 @@ h1, h2, h3, p {
         padding: 0.5rem 1rem;
         border: 1px solid #DBDBDB;
         border-radius: 2px;
+        cursor: pointer;
         .bar1,
         .bar2,
         .bar3 {
@@ -175,6 +179,41 @@ h1, h2, h3, p {
         }
     }
     
+}
+
+// hamburger menu
+
+.hamburger-menu {
+    position: fixed;
+    top: 74px;
+    left: 0;
+    right: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: $transition;
+    background-color: darken($light, 2);
+    z-index: 100;
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+
+    &__navlinks {
+        @include container(0, 600px);
+    }
+
+    &__navlink {
+        padding: 1rem 0 1rem 2rem;
+        width: 100%;
+        display: block;
+        transition: $transition;
+        color: $dark;
+        &:hover {
+        
+          color: $primary;
+        }
+      }
+    
+    @include xl {
+        display: none;
+    }
 }
 
 
@@ -195,6 +234,10 @@ h1, h2, h3, p {
         position: relative;
         @include xl {
             @include container(0 1rem, 1200px); 
+            
+        }
+
+        @include mediaQuery(2000px) {
             height: 1000px;
         }
        
@@ -293,7 +336,7 @@ h1, h2, h3, p {
 }
 
 .divider {
-    background-color: lighten($primary, 10);
+    background-color: lighten($primary, 15);
     &__container {
         @include container(5rem 1rem, 600px);
         @include xl {
