--- a/styles/main.css
+++ b/styles/main.css
@@ -105,9 +105,9 @@ h1, h2, h3, p {
 
 .navbar {
   background-color: #F6F6F6;
-  position: fixed;
   -webkit-box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
           box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -120,20 +120,8 @@ h1, h2, h3, p {
     background-color: transparent;
     -webkit-box-shadow: none;
             box-shadow: none;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    -webkit-animation: navbarAnimation 1.5s forwards;
-            animation: navbarAnimation 1.5s forwards;
-    -webkit-animation-delay: 2s;
-            animation-delay: 2s;
-    -webkit-transform: translateY(-100%);
-            transform: translateY(-100%);
-  }
-  .navbar.active {
-    position: fixed;
-    background: #F6F6F6;
-    -webkit-box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+    -webkit-animation: navbarAnimation 1.5s ease forwards;
+            animation: navbarAnimation 1.5s ease forwards;
   }
   @-webkit-keyframes navbarAnimation {
     0% {
@@ -270,6 +258,26 @@ h1, h2, h3, p {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  -webkit-animation: revealBg 1s ease;
+          animation: revealBg 1s ease;
+}
+
+@-webkit-keyframes revealBg {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes revealBg {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -329,15 +337,15 @@ h1, h2, h3, p {
     max-width: 500px;
     -webkit-animation: showText 2s ease forwards;
             animation: showText 2s ease forwards;
-    -webkit-animation-delay: 1.5s;
-            animation-delay: 1.5s;
+    -webkit-animation-delay: 2s;
+            animation-delay: 2s;
     opacity: 0;
   }
   @-webkit-keyframes showText {
     0% {
       opacity: 0;
-      -webkit-transform: translateX(-20%);
-              transform: translateX(-20%);
+      -webkit-transform: translateX(-10%);
+              transform: translateX(-10%);
     }
     100% {
       opacity: 1;
@@ -348,8 +356,8 @@ h1, h2, h3, p {
   @keyframes showText {
     0% {
       opacity: 0;
-      -webkit-transform: translateX(-20%);
-              transform: translateX(-20%);
+      -webkit-transform: translateX(-10%);
+              transform: translateX(-10%);
     }
     100% {
       opacity: 1;
