--- a/styles/main.scss
+++ b/styles/main.scss
@@ -108,30 +108,22 @@ h1, h2, h3, p {
 
 
 // navbar
-
 .navbar {
     background-color: $light;
-    position: fixed;
     box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 5;
     
-   
+
     @include xl {
         position: absolute;
         background-color: transparent;
         box-shadow: none;
-        transition: $transition;
-        &.active {
-            position: fixed;
-            background: $light;
-            box-shadow: 0 2px 2px -2px rgba(0,0,0,.2); 
-        }
-        animation: navbarAnimation 1.5s forwards;
-        animation-delay: 2s;
-        transform: translateY(-100%);
+        animation: navbarAnimation 1.5s ease forwards;
+   
         @keyframes navbarAnimation {
             0% {
                 transform: translateY(-100%);
@@ -227,6 +219,16 @@ h1, h2, h3, p {
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+        animation: revealBg 1s ease;
+        
+        @keyframes revealBg {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
         @include xl {
             background-image: unset;
         }
@@ -257,12 +259,12 @@ h1, h2, h3, p {
             text-align: left; 
             max-width: 500px;
             animation: showText 2s ease forwards;
-            animation-delay: 1.5s;
+            animation-delay: 2s;
             opacity: 0;
                 @keyframes showText {
                     0% {
                         opacity: 0;
-                        transform: translateX(-20%);
+                        transform: translateX(-10%);
                     }
                     100% {
                         opacity: 1;
