--- a/styles/main.css
+++ b/styles/main.css
@@ -383,17 +383,25 @@ h1, h2, h3, p {
   @-webkit-keyframes reveal {
     0% {
       opacity: 0;
+      -webkit-transform: translateY(-100px);
+              transform: translateY(-100px);
     }
     100% {
       opacity: 1;
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
     }
   }
   @keyframes reveal {
     0% {
       opacity: 0;
+      -webkit-transform: translateY(-100px);
+              transform: translateY(-100px);
     }
     100% {
       opacity: 1;
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
     }
   }
 }
