--- a/styles/main.scss
+++ b/styles/main.scss
@@ -295,9 +295,11 @@ h1, h2, h3, p {
       
                 0% {
                     opacity: 0;
+                    transform: translateY(-100px);
                 }
                 100% {
                     opacity: 1;
+                    transform: translateY(0);
                 }
             }   
         }
